<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToEat</string>
    <string name="welcome">Welcome</string>
    <string name="enter">Enter</string>
    <string name="birthYear">Birth year:</string>
    <string name="InvalidLogin">Invalid login!</string>
    <string name="error">Error!</string>
    <string name="creationError">There was an error with the account creation!</string>
    <string name="loggedIn">Logged in!</string>
    <string name="register">Register</string>
    <string name="sign_up">Register</string>
    <string name="email" translatable="false">email</string>
    <string name="password" translatable="false">password</string>
    <string name="action_sign_in_short" translatable="false">action_sign_in_short</string>
    <string name="name">name</string>
    <string name="age">age</string>
    <string name="error_invalid_password">Invalid password!</string>
    <string name="error_empty_password">Password can\'t be empty!</string>
    <string name="error_password_too_short">Password should be longer than 4 characters!</string>
    <string name="error_invalid_email">Invalid email!</string>
    <string name="error_empty_email">Email can\'t be empty!</string>
    <string name="error_invalid_name">Invalid name!</string>
    <string name="preference_file_key" translatable="false">myFile</string>
    <string name="title_activity_item" translatable="false">item</string>
    <string name="title_login_main">Login</string>
    <string name="title_activity_new_local">New local</string>
    <string name="title_activity_listlocal">Local list</string>
    <string name="title_activity_local_detail">Local detail</string>
    <string name="title_activity_add_review">Add review</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_login_main" translatable="false">ToEat</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="newHere">New Here?</string>
    <string name="localName">Name:</string>
    <string name="money">money</string>
    <string name="type">type</string>
    <string name="newLocalDetail">Insert new local details</string>
    <string name="localType">Type:</string>
    <string name="localMoney">Cost:</string>
    <string name="address">address</string>
    <string name="localAddress">Address:</string>
    <string name="contact">contact</string>
    <string name="hours">hours</string>
    <string name="localContact">Contact:</string>
    <string name="localHours">Opening:</string>
    <string name="reviews">REVIEWS</string>
    <string name="addReview">ADD REVIEW</string>
    <string name="says">says:</string>
    <string name="addComment">Add a comment</string>
    <string name="rate">Rate this local!</string>
    <string name="title_activity_review_detail">Review detail</string>
    <string name="fillFields">Please fill in all fields</string>
    <string name="error_invalid_age">Invalid age!</string>
    <string name="welcomeToast">Welcome</string>
    <string name="title_activity_reg" translatable="false">ToEat</string>
    <string name="userMail" translatable="false">Mail:</string>
    <string name="noAge">Age not set</string>
    <string name="notNumeric">Price should be a number</string>
    <string name="notNumericH">Opening should be a numeric value</string>
</resources>