<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginMainActivity"
    tools:showIn="@layout/activity_login_main"
    android:background="#446aca">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/button"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="E-mail:"
        android:id="@+id/labelMail"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="#f2fbff"
        android:drawableLeft="@drawable/mail"
        android:layout_gravity="left" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/textMail"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:layout_gravity="left"
        android:background="#c5e1ed" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Password:"
        android:id="@+id/labelPsw"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|left"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/textPsw"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textMail"
        android:textColor="#000000"
        android:background="#c5e1ed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newHere"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textColor="#f2fbff"
        android:layout_gravity="left"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="71dp"
        android:layout_height="30dp"
        android:text="@string/register"
        android:id="@+id/buttonRegister"
        android:layout_below="@+id/textPsw"
        android:layout_centerHorizontal="true"
        android:allowUndo="false"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:layout_gravity="left"
        android:layout_marginTop="2dp"
        android:textSize="10dp" />

</LinearLayout>
